src/styles/site.css
@tailwind base;

@tailwind components;

@tailwind utilities;

html {
  @apply transition-colors;
  @apply duration-200;

  color: var(--color-text);
  background-color: var(--color-background);

  /* More Elegant Fix for Jumping Scrollbar Issue - https://css-tricks.com/elegant-fix-jumping-scrollbar-issue/ */
  margin-left: calc(100vw - 100%);

  @apply antialiased;
}

a {
  @apply no-underline;

  color: var(--color-primary);
}

.gatsby-highlight-code-line {
  @apply bg-gray-800;
  @apply block;
  @apply -ml-4;
  @apply -mr-4;
  @apply pr-4;
  @apply pl-3;
  @apply border-l-4;
  @apply border-solid;
  @apply border-green-600;
}

.gatsby-highlight {
  background-color: #1d1f21;
  @apply overflow-auto;
  @apply rounded-md;
}

.gatsby-highlight pre[class*="language-"] {
  @apply bg-transparent;
  @apply float-left;
  @apply min-w-full;
}

